testing/Travis/testcases/prototype/shouldSucceed/try41.adl
CONTEXT Try41 IN ENGLISH


PATTERN Try41

RELATION r[A*B]

RULE Try41: r\r

ENDPATTERN

ENDCONTEXT
